--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,16 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+bun-debug.log*
+
+# Dependencies
+node_modules/
+
+# Build output
+.output/
+.nitro/
+dist/
+.turbo/
 
 # Environment variables
 .env
