--- a/package.json
+++ b/package.json
@@ -2,24 +2,31 @@
   "name": "applylogics",
   "private": true,
   "type": "module",
+  "imports": {
+    "#/*": "./src/*"
+  },
   "scripts": {
-    "dev": "vite dev",
+    "dev": "vite dev --port 3000",
     "build": "vite build",
-    "start": "node server-start.mjs"
+    "preview": "vite preview",
+    "start": "bun .output/server/index.mjs"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.114.23",
-    "@tanstack/react-start": "^1.114.23",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@tanstack/react-router": "^1.163.2",
+    "@tanstack/react-router-ssr-query": "^1.163.2",
+    "@tanstack/react-start": "^1.163.2",
+    "@tanstack/router-plugin": "^1.163.2",
+    "nitro": "npm:nitro-nightly@latest",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@types/node": "^22.0.0",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "^5.7.0",
-    "vite": "^7.0.0",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "@vitejs/plugin-react": "^5.1.4",
+    "typescript": "^5.7.2",
+    "vite": "^7.3.1",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
