--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "bun .output/server/index.mjs"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-router": "^1.163.2",
     "@tanstack/react-router-ssr-query": "^1.163.2",
     "@tanstack/react-start": "^1.163.2",
